Subida do projeto Final

--- a/FolhaPonto.Api/appsettings.json
+++ b/FolhaPonto.Api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionString": {
+    "Local": "Server=(localdb)\\mssqllocaldb;Database=FolhaPonto;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "dfusa7f9090dfsiaisfdasfiuasjasdfa90cvzxxzcvasf998dfspd",
+    "Issuer": "FolhaPontoIssuer",
+    "Audience": "FolhaPontoAudience"
+  },
+
+
   "AllowedHosts": "*"
 }
